--- a/CNN FUNDAMENTALS.ipynb
+++ b/CNN FUNDAMENTALS.ipynb
@@ -211,6 +211,9 @@
     "4.Suitable for tasks requiring distinct feature detection, like object recognition.\n",
     "Average Pooling:\n",
     "1.Computes the average of all values in the pooling window\n",
+    "2.Provides a smoother and more generalized feature representation.\n",
+    "3.Tends to smooth out features and reduce sharpness.\n",
+    "4.Suitable for scenarios requiring noise reduction or generalization.\n",
     "    \n",
     "\n",
     "\n"
